<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".activities.PasswordAddActivity">


    <EditText
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/editTextHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:hint="@string/adder_host" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adder_password"
        android:ems="10"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/textViewLoading"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:alpha="0"
        android:text="@string/edit_loading"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/adder_add"/>
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adder_cancel"/>

</LinearLayout>