<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewHost"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="22sp"
            android:background="@drawable/outline"
            android:text="@string/edit_host" />
        <TextView
            android:id="@+id/textViewPassword"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:background="@drawable/outline"
            android:text="@string/edit_password" />

    </LinearLayout>
    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/edit_edit"/>
    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_delete"/>
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/edit_cancel"/>

</LinearLayout>